--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -7,6 +7,7 @@ python-multipart  # for file uploads
 # These versions are known to work with the current imports and extensions
 langchain==0.3.27
 langchain-core==0.3.80
+langchain-community==0.3.12
 langchain-groq==0.3.8
 groq==0.36.0
 langchain-google-genai==2.0.4
