--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,20 +1,16 @@
-# Web Framework
 fastapi
 uvicorn[standard]
-python-multipart  # for file uploads
+python-multipart
 
-# LangChain & Ecosystem (pinned to versions compatible with the project code)
-# These versions are known to work with the current imports and extensions
-langchain==0.3.27
-langchain-core==0.3.80
+# LangChain - all versions aligned
+langchain==0.3.12
+langchain-core==0.3.12
 langchain-community==0.3.12
 langchain-groq==0.3.8
-groq==0.36.0
 langchain-google-genai==2.0.4
 langchain-huggingface==0.3.1
 
 # Vectorstore
-# Use the official Pinecone package
 pinecone
 
 # Embeddings / Models
@@ -30,9 +26,4 @@ python-dotenv
 pydantic
 requests
 tqdm
-
-# Logging (optional but recommended)
 loguru
-
-# Install with:
-# pip install -r server/requirements.txt
