--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,7 @@ python-multipart
 
 # LangChain - valid matching set
 langchain==0.3.12
+langchain-core==0.3.12
 langchain-community==0.3.12
 langchain-groq==0.3.8
 langchain-google-genai==2.0.4
